# Safe-Policy-Optimization

./: .envrc  .gitignore  Makefile  README.md  notes.md  pyproject.toml  setup.py
.github/workflows/: test.yml
docs/: Installation.md
docs/migration/: CHANGELOG_UV_MIGRATION.md  MIGRATION_COMPLETE_REPORT.md  MIGRATION_TO_UV.md  QUICKSTART.md  UV_MIGRATION_SUMMARY.md
safepo/common/: env.py  logger.py  video_recorder.py  wrappers.py
safepo/multi_agent/: happo.py  macpo.py  mappo.py  mappolag.py
safepo/multi_agent/marl_cfg/macpo/: config.yaml
safepo/multi_agent/marl_cfg/mappolag/: config.yaml
safepo/single_agent/: cppo_pid.py  cup.py  focops.py  pg.py  ppo.py  ppo_lag.py
safepo/utils/: config.py
safety_gymnasium/: pyproject.toml
safety_gymnasium/safety_gymnasium/tasks/safe_multi_agent/: __init__.py
safety_gymnasium/safety_gymnasium/tasks/safe_multi_agent/assets/xmls/: multi_car.xml  multi_doggo.xml  multi_racecar.xml
safety_gymnasium/safety_gymnasium/tasks/safe_multi_agent/tasks/: __init__.py
